fixed alignment of publish items

--- a/www/framework/Cms/sass/modules/_publish.scss
+++ b/www/framework/Cms/sass/modules/_publish.scss
@@ -23,7 +23,7 @@ form.lastchanged_pages {
         float: right;
     }
     p.small {
-        margin-left: 20px;
+        margin-left: $checkboxSize * 1.25;
         margin-top: -10px;
         color: #555555;
         font-size: 9px;
